Update css modules

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -128,7 +128,7 @@
                     <!-- Collapsed content -->
                     <ul id="collapseCerrar" class="collapse show list-group list-group-flush">
                         <li class="list-group-item py-1">
-                            <a href="" class="text-reset">
+                            <a href={{ path('app_logout') }} class="text-reset">
                                 <i class="fa-solid fa-right-from-bracket me-3"></i><span>Cerrar Sesión</span>
                             </a>
                         </li>
