--- a/templates/presentation/new.html.twig
+++ b/templates/presentation/new.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Presentation{% endblock %}
+{% block title %}Productos | Presentación{% endblock %}
 
 {% block body %}
-    <h1>Create new Presentation</h1>
-
-    {{ include('presentation/_form.html.twig') }}
-
-    <a href="{{ path('app_presentation_index') }}">back to list</a>
+    <div class="content">
+        <div class="actionsForm backBtn">
+            <a href={{ path('app_presentation_index') }} class="btn btn-add"><i class="fa-solid fa-arrow-left me-2"></i> Volver a la lista</a>
+        </div>
+        <h1 class="titleSection"><i class="fa-regular fa-square-plus me-2"></i> Agregar Presentación</h1>
+        {{ include('presentation/_form.html.twig') }}
+    </div> 
 {% endblock %}
