--- a/templates/privacy/show.html.twig
+++ b/templates/privacy/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Privacy{% endblock %}
+{% block title %}Políticas de Privacidad{% endblock %}
 
 {% block body %}
-    <h1>Privacy</h1>
+    <h1>Políticas de Privacidad</h1>
 
     <table class="table">
         <tbody>
