--- a/templates/categories/show.html.twig
+++ b/templates/categories/show.html.twig
@@ -1,26 +1,32 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Categories{% endblock %}
+{% block title %}Productos | Categorías{% endblock %}
 
 {% block body %}
-    <h1>Categories</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ category.id }}</td>
-            </tr>
-            <tr>
-                <th>TypeCategory</th>
-                <td>{{ category.typeCategory }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_categories_index') }}">back to list</a>
-
-    <a href="{{ path('app_categories_edit', {'id': category.id}) }}">edit</a>
-
-    {{ include('categories/_delete_form.html.twig') }}
+    <div class="content">
+        <div class="actionsForm backBtn">
+            <a href="{{ path('app_categories_index') }}" class="btn btn-add"><i class="fa-solid fa-arrow-left me-2"></i> Volver a la lista</a>
+        </div>
+        <h2 class="titleSection"><i class="fa-regular fa-eye me-2"></i>Detalle de Categoría</h2>
+        <div class="detailProduct Other">
+            <div class="infoProduct">
+                <table class="table">
+                    <tbody>
+                        <tr>
+                            <th>ID</th>
+                            <td>{{ category.id }}</td>
+                        </tr>
+                        <tr>
+                            <th>Categoría:</th>
+                            <td>{{ category.typeCategory }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="actionsForm">
+                    <a href="{{ path('app_categories_edit', {'id': category.id}) }}" class="btn btn-edit"><i class="fa-regular fa-pen-to-square me-2"></i> Editar</a>
+                    {{ include('categories/_delete_form.html.twig') }}
+                </div>
+            </div>
+        </div>        
+    </div>
 {% endblock %}
