--- a/templates/clients/edit.html.twig
+++ b/templates/clients/edit.html.twig
@@ -1,13 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Clients{% endblock %}
+{% block title %}Clientes{% endblock %}
 
 {% block body %}
-    <h1>Edit Clients</h1>
-
-    {{ include('clients/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_clients_index') }}">back to list</a>
-
-    {{ include('clients/_delete_form.html.twig') }}
+    <div class="content">
+        <div class="actionsForm backBtn">
+            <a href="{{ path('app_clients_index') }}" class="btn btn-add"><i class="fa-solid fa-arrow-left me-2"></i> Volver a la lista</a>
+        </div>
+        <h1 class="titleSection"><i class="fa-regular fa-pen-to-square me-2"></i>Editar Cliente</h1>
+        {{ include('clients/_form.html.twig', {'button_label': 'Guardar'}) }}
+        <div class="actionsForm">
+            {{ include('clients/_delete_form.html.twig') }}
+        </div>
+    </div>   
 {% endblock %}
