--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -1,41 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Orders index{% endblock %}
+{% block title %}Pedidos{% endblock %}
 
 {% block body %}
-    <h1>Orders index</h1>
+    <div class="content">
+        <h1 class="titleSection"><i class="fa-solid fa-cart-arrow-down me-3"></i> Pedidos</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>OrderNum</th>
-                <th>OrderDate</th>
-                <th>OrderDelivery</th>
-                <th>Total</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for order in orders %}
-            <tr>
-                <td>{{ order.id }}</td>
-                <td>{{ order.orderNum }}</td>
-                <td>{{ order.orderDate ? order.orderDate|date('Y-m-d') : '' }}</td>
-                <td>{{ order.orderDelivery ? order.orderDelivery|date('Y-m-d') : '' }}</td>
-                <td>{{ order.total }}</td>
-                <td>
-                    <a href="{{ path('app_orders_show', {'id': order.id}) }}">show</a>
-                    <a href="{{ path('app_orders_edit', {'id': order.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    {# <th>Id</th> #}
+                    <th>N° de Pedido</th>
+                    <th>Fecha de Registro</th>
+                    <th>Fecha de Entrega</th>
+                    <th>Total</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for order in orders %}
+                <tr>
+                    {# <td>{{ order.id }}</td> #}
+                    <td>{{ order.orderNum }}</td>
+                    <td>{{ order.orderDate ? order.orderDate|date('Y-m-d') : '' }}</td>
+                    <td>{{ order.orderDelivery ? order.orderDelivery|date('Y-m-d') : '' }}</td>
+                    <td>{{ order.total }}</td>
+                    <td>
+                        <a href="{{ path('app_orders_show', {'id': order.id}) }}">show</a>
+                        <a href="{{ path('app_orders_edit', {'id': order.id}) }}">edit</a>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="6">No se encontraron Pedidos</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
-    <a href="{{ path('app_orders_new') }}">Create new</a>
+        <a href="{{ path('app_orders_new') }}" class="btn btn-add"><i class="fa-regular fa-square-plus me-2"></i> Agregar</a>
+    </div>
 {% endblock %}
