--- a/templates/orders/show.html.twig
+++ b/templates/orders/show.html.twig
@@ -1,38 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Orders{% endblock %}
+{% block title %}Pedidos{% endblock %}
 
 {% block body %}
-    <h1>Orders</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ order.id }}</td>
-            </tr>
-            <tr>
-                <th>OrderNum</th>
-                <td>{{ order.orderNum }}</td>
-            </tr>
-            <tr>
-                <th>OrderDate</th>
-                <td>{{ order.orderDate ? order.orderDate|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>OrderDelivery</th>
-                <td>{{ order.orderDelivery ? order.orderDelivery|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Total</th>
-                <td>{{ order.total }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_orders_index') }}">back to list</a>
-
-    <a href="{{ path('app_orders_edit', {'id': order.id}) }}">edit</a>
-
-    {{ include('orders/_delete_form.html.twig') }}
+    <div class="content">
+        <div class="actionsForm backBtn">
+            <a href={{ path('app_orders_index') }} class="btn btn-add"><i class="fa-solid fa-arrow-left me-2"></i> Volver a la lista</a>
+        </div>
+        <h2 class="titleSection"><i class="fa-regular fa-eye me-2"></i>Detalle de Cliente</h2>
+        <div class="detailProduct Other">
+            <div class="infoProduct">
+                <table class="table">
+                    <tbody>
+                        <tr>
+                            <th>Id</th>
+                            <td>{{ order.id }}</td>
+                        </tr>
+                        <tr>
+                            <th>OrderNum</th>
+                            <td>{{ order.orderNum }}</td>
+                        </tr>
+                        <tr>
+                            <th>OrderDate</th>
+                            <td>{{ order.orderDate ? order.orderDate|date('Y-m-d') : '' }}</td>
+                        </tr>
+                        <tr>
+                            <th>OrderDelivery</th>
+                            <td>{{ order.orderDelivery ? order.orderDelivery|date('Y-m-d') : '' }}</td>
+                        </tr>
+                        <tr>
+                            <th>Total</th>
+                            <td>{{ order.total }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="actionsForm">
+                    <a href={{ path('app_orders_edit', {'id': order.id}) }} class="btn btn-edit"><i class="fa-regular fa-pen-to-square me-2"></i> Editar</a>
+                    {{ include('orders/_delete_form.html.twig') }}
+                </div>
+            </div>
+        </div>        
+    </div>
 {% endblock %}
