--- a/templates/privacy/edit.html.twig
+++ b/templates/privacy/edit.html.twig
@@ -1,13 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Privacy{% endblock %}
+{% block title %}Políticas de Privacidad{% endblock %}
 
 {% block body %}
-    <h1>Edit Privacy</h1>
-
-    {{ include('privacy/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_privacy_index') }}">back to list</a>
-
-    {{ include('privacy/_delete_form.html.twig') }}
+    <div class="content">
+        <div class="actionsForm backBtn">
+            <a href="{{ path('app_privacy_index') }}" class="btn btn-add"><i class="fa-solid fa-arrow-left me-2"></i> Volver</a>
+        </div>
+        <h1 class="titleSection"><i class="fa-regular fa-pen-to-square me-2"></i>Editar Políticas de Privacidad</h1>
+        {{ include('privacy/_form.html.twig', {'button_label': 'Guardar'}) }}
+        <div class="actionsForm">
+            {{ include('privacy/_delete_form.html.twig') }}
+        </div>
+    </div>
 {% endblock %}
