--- a/templates/privacy/index.html.twig
+++ b/templates/privacy/index.html.twig
@@ -1,35 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Privacy index{% endblock %}
+{% block title %}Políticas de Privacidad{% endblock %}
 
 {% block body %}
-    <h1>Privacy index</h1>
-
-    <table class="table">
+<div class="content">
+    <h1 class="titleSection"><i class="fa-solid fa-shop me-3"></i> Políticas de Privacidad</h1>
+    <table class="table table-striped">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Description</th>
-                <th>actions</th>
+                {# <th>Id</th> #}
+                <th>Descripción</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
         {% for privacy in privacies %}
             <tr>
-                <td>{{ privacy.id }}</td>
+                {# <td>{{ privacy.id }}</td> #}
                 <td>{{ privacy.description }}</td>
                 <td>
-                    <a href="{{ path('app_privacy_show', {'id': privacy.id}) }}">show</a>
-                    <a href="{{ path('app_privacy_edit', {'id': privacy.id}) }}">edit</a>
+                    <a href="{{ path('app_privacy_show', {'id': privacy.id}) }}" class="btn btn-show">
+                        <i class="fa-regular fa-eye"></i>
+                    </a>
+                    <a href="{{ path('app_privacy_edit', {'id': privacy.id}) }}" class="btn btn-edit">
+                        <i class="fa-regular fa-pen-to-square"></i>
+                    </a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">No se encontró información sobre Poliíticas de Privacidad</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_privacy_new') }}">Create new</a>
+    <a href="{{ path('app_privacy_new') }}" class="btn btn-add"><i class="fa-regular fa-square-plus me-2"></i> Agregar</a>
 {% endblock %}
