--- a/templates/store/show.html.twig
+++ b/templates/store/show.html.twig
@@ -1,42 +1,48 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Store{% endblock %}
+{% block title %}Información de Contacto{% endblock %}
 
 {% block body %}
-    <h1>Store</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ store.id }}</td>
-            </tr>
-            <tr>
-                <th>Address</th>
-                <td>{{ store.address }}</td>
-            </tr>
-            <tr>
-                <th>Phone</th>
-                <td>{{ store.phone }}</td>
-            </tr>
-            <tr>
-                <th>Instagram</th>
-                <td>{{ store.instagram }}</td>
-            </tr>
-            <tr>
-                <th>Facebook</th>
-                <td>{{ store.facebook }}</td>
-            </tr>
-            <tr>
-                <th>Youtube</th>
-                <td>{{ store.youtube }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_store_index') }}">back to list</a>
-
-    <a href="{{ path('app_store_edit', {'id': store.id}) }}">edit</a>
-
-    {{ include('store/_delete_form.html.twig') }}
+    <div class="content">
+        <div class="actionsForm backBtn">
+            <a href={{ path('app_store_index') }} class="btn btn-add"><i class="fa-solid fa-arrow-left me-2"></i> Volver</a>
+        </div>
+        <h2 class="titleSection"><i class="fa-regular fa-eye me-2"></i>Información de Contacto</h2>
+        <div class="detailProduct Other">
+            <div class="infoProduct">
+                <table class="table">
+                    <tbody>
+                        {# <tr>
+                            <th>Id</th>
+                            <td>{{ store.id }}</td>
+                        </tr> #}
+                        <tr>
+                            <th>Dirección:</th>
+                            <td>{{ store.address }}</td>
+                        </tr>
+                        <tr>
+                            <th>Teléfono:</th>
+                            <td>{{ store.phone }}</td>
+                        </tr>
+                        <tr>
+                            <th>Instagram:</th>
+                            <td>{{ store.instagram }}</td>
+                        </tr>
+                        <tr>
+                            <th>Facebook:</th>
+                            <td>{{ store.facebook }}</td>
+                        </tr>
+                        <tr>
+                            <th>Youtube:</th>
+                            <td>{{ store.youtube }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="actionsForm">
+                    <a href={{ path('app_store_edit', {'id': store.id}) }} class="btn btn-edit"><i class="fa-regular fa-pen-to-square me-2"></i> Editar</a>
+                    {# {{ include('store/_delete_form.html.twig') }} #}
+                </div>
+            </div>
+        </div>        
+    </div>
 {% endblock %}
