--- a/templates/terms/_delete_form.html.twig
+++ b/templates/terms/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_terms_delete', {'id': term.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ term.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger"><i class="fa-solid fa-trash me-2"></i>Eliminar</button>
 </form>
