--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -7,17 +7,17 @@
     <div class="content">
         <h1 class="titleSection"><i class="fa-solid fa-basket-shopping me-3"></i> Productos</h1>
 
-        <table class="table table-striped">
+        <table class="table table-striped table-products">
             <thead>
                 <tr>
                     <th>ID</th>
                     <th>Foto</th>
                     <th>Nombre</th>
-                    <th>Descripción</th>
+                    {# <th>Descripción</th> #}
                     <th>Precio</th>
                     <th>Estado</th>
-                    <th>Categoria(s)</th>
-                    <th>Presentación</th>
+                    {# <th>Categoria(s)</th> #}
+                    {# <th>Presentación</th> #}
                     <th>Acciones</th>
                 </tr>
             </thead>
@@ -26,18 +26,26 @@
                 <tr>
                     <td>{{ product.id }}</td>
                     <td> 
-                        <img src={{ asset('uploads/products/' ~ product.photo) }} alt={{ product.name }} width="30">
+                        <img src={{ asset('uploads/products/' ~ product.photo) }} alt={{ product.name }} width="60">
                     </td>
                     <td>{{ product.name }}</td>
-                    <td>{{ product.description }}</td>
+                    {# <td>{{ product.description }}</td> #}
                     <td>{{ product.price }}</td>
                     <td>{{ product.state ? 'Activo' : 'Inactivo' }}</td>
-                    <td>
-                        {# {{ product.category}} #}Categoria
-                    </td>
-                    <td>
-                        {# {{ product.presentation }}#}Presentacion
-                    </td>
+                    {# <td>
+                        {% set categoryTypes = [] %}
+                        {% for category in product.category %}
+                            {% set categoryTypes = categoryTypes|merge([category.typeCategory]) %}
+                        {% endfor %}
+                        {{ categoryTypes|join(', ') }}                  
+                    </td> #}
+                    {# <td>
+                        {% set presentationTypes = [] %}
+                        {% for presentation in product.presentation %}
+                            {% set presentationTypes = presentationTypes|merge([presentation.typePresentation]) %}
+                        {% endfor %}
+                        {{ presentationTypes|join(', ') }}
+                    </td> #}
                     <td>
                         <a href="{{ path('app_products_show', {'id': product.id}) }}" class="btn btn-show">
                             <i class="fa-regular fa-eye"></i>
@@ -54,7 +62,6 @@
             {% endfor %}
             </tbody>
         </table>
-
         <a href="{{ path('app_products_new') }}" class="btn btn-add"><i class="fa-regular fa-square-plus me-2"></i> Agregar</a>
     </div>
 {% endblock %}
